[package]
name = "celo-alloy-rpc-types-engine"
description = "Celo RPC types for the `engine` namespace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
celo-alloy-consensus = { workspace = true, features = ["k256"] }

# Alloy
alloy-eips.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rlp.workspace = true
alloy-consensus = { workspace = true, optional = true }

# OP Alloy
op-alloy-rpc-types-engine = { workspace = true, features = ["serde"] }

[dev-dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true

[features]
default = ["std", "serde"]
std = [
    "alloy-rpc-types-engine/ssz",
    "alloy-rpc-types-engine/std",
]
serde = ["alloy-rpc-types-engine/serde"]
k256 = ["alloy-consensus/k256"]
