[package]
name = "celo-driver"
description = "A no_std derivation pipeline driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
celo-alloy-rpc-types-engine.workspace = true
celo-alloy-consensus.workspace = true
celo-executor.workspace = true
celo-protocol.workspace = true
celo-genesis.workspace = true

# Kona
kona-derive.workspace = true
kona-protocol.workspace = true
kona-driver.workspace = true

# Alloy
alloy-rlp.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true

# Misc
async-trait.workspace = true
spin.workspace = true
tracing.workspace = true
