[package]
name = "celo-proof"
description = "Celo Proof SDK"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
celo-executor.workspace = true
celo-alloy-consensus.workspace = true
celo-alloy-rpc-types-engine = { workspace = true, features = ["serde"] }
celo-driver.workspace = true
celo-genesis = { workspace = true, features = ["serde"] }

# Kona
kona-mpt.workspace = true
kona-executor.workspace = true

# Alloy
alloy-consensus.workspace = true
alloy-primitives.workspace = true

# Execution
alloy-evm.workspace = true
op-revm.workspace = true

# General
async-trait.workspace = true

# `std` feature dependencies
tokio = { workspace = true, features = ["full"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
std = ["dep:tokio"]
