[package]
name = "celo-proof"
description = "Celo Proof SDK"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
celo-executor.workspace = true
celo-alloy-consensus.workspace = true
celo-alloy-rpc-types-engine = { workspace = true, features = ["serde"] }
celo-driver.workspace = true
celo-genesis = { workspace = true, features = ["serde"] }
celo-registry = { version = "0.1.0", path = "../registry" }
celo-protocol.workspace = true

# Kona
kona-mpt.workspace = true
kona-executor.workspace = true
kona-proof.workspace = true
kona-preimage.workspace = true
kona-driver.workspace = true
kona-genesis.workspace = true
kona-protocol.workspace = true
kona-derive.workspace = true

# Alloy
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-rlp.workspace = true

# OP Alloy
op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine.workspace = true

# Execution
alloy-evm.workspace = true
op-revm.workspace = true

# General
serde.workspace = true
tracing.workspace = true
serde_json.workspace = true
async-trait.workspace = true
spin.workspace = true

# `std` feature dependencies
tokio = { workspace = true, features = ["full"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
std = ["dep:tokio"]
