[package]
name = "celo-registry"
version = "0.1.0"
description = "A registry of superchain configs"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace
celo-genesis = { workspace = true, features = ["serde"] }

# Kona
kona-genesis = { workspace = true, features = ["serde"] }
kona-registry = { workspace = true }

# Alloy
alloy-primitives = { workspace = true, features = ["map"] }
alloy-chains = { workspace = true, features = ["serde"] }

# `serde`
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true, features = ["raw_value"] }

# misc
lazy_static = { workspace = true, features = ["spin_no_std"] }

[build-dependencies]
serde_json = { workspace = true, features = ["raw_value"] }
kona-genesis = { workspace = true, features = ["serde"] }

[features]
default = []
std = [
    "kona-genesis/std",
    "serde_json/std",
    "alloy-primitives/std",
    "serde/std",
    "alloy-chains/std"
]
